# STM32_CMake_Example

./: CMakeLists.txt
cmake/: FindFreeRTOS.cmake
common/amk/: amk.c  amk.h
common/common_defs/: common_defs.h
common/daq/: can_config.json  daq_base.h  per_dbc.dbc
common/eeprom_spi/: CMakeLists.txt  eeprom_spi.c  eeprom_spi.h
common/freertos/: freertos.h
common/freertos_M4F/FreeRTOS-Kernel/include/: FreeRTOSConfig.h
common/log/: log.h
common/phal_F4_F7/gpio/: gpio.h
common/phal_F4_F7/rcc/: rcc.c  rcc.h
common/phal_F4_F7/usart/: usart.c  usart.h
source/a_box/: main.c  main.h
source/daq/: CMakeLists.txt  main.c  main.h
source/daq/daq_hub/: daq_can.c  daq_can.h  daq_hub.c  daq_hub.h
source/daq/ftp/: ftpd.c
source/dashboard/: main.c  main.h
source/dashboard/lcd/: lcd.c  lcd.h  menu_system.c  menu_system.h
source/dashboard/nextion/: nextion.c  nextion.h
source/dashboard/pedals/: pedals.c  pedals.h
source/f4_testing/: CMakeLists.txt  daq_disco_hello.c  daq_disco_pds_can.c  f4_testing_common.h  freertos_demo.c  main.c  os.c  os.h  pds.h
source/f4_testing/can/: can_parse.c  can_parse.h
source/l4_testing/: main.c
source/main_module/: CMakeLists.txt  main.c
source/main_module/can/: can_parse.c  can_parse.h
source/main_module/car/: car.c  car.h
source/pdu/: main.c
source/torque_vector/: main.c
